--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "fmt": "pnpm rome check . --apply-unsafe && pnpm rome format . --write"
+    "format": "pnpm biome check . --apply-unsafe && pnpm biome format . --write"
   },
   "dependencies": {
     "@next/mdx": "^13.5.4",
@@ -27,6 +27,7 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.4.0",
     "@opentelemetry/api": "1.6.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
@@ -36,7 +37,6 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "postcss-nesting": "^12.0.1",
-    "rome": "^12.1.3",
     "tailwindcss": "^3.3.3",
     "tailwindcss-debug-screens": "^2.2.1"
   },
