--- a/biome.json
+++ b/biome.json
@@ -2,7 +2,10 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"complexity": {
+				"noForEach": "off"
+			}
 		},
 		"ignore": ["node_modules", ".next", "dist", ".contentlayer"]
 	},
